--- a/public/assets/css/dash_prestataires.css
+++ b/public/assets/css/dash_prestataires.css
@@ -1,10 +1,11 @@
-.infos {
+/* .infos {
     position: relative;
     top: 0%;
     width: 100%;
-    margin: 90px 0 100px;
+    margin: 90px 0 80px;
     padding: 0;
     height: 100px;
+    z-index: 1;
     background: #009EE2;
     box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.16), 0px 4px 32px rgba(0, 0, 0, 0.16);
 }
@@ -32,7 +33,6 @@
 .infos .rectangle-profil .rectanggle-bleu img {
     position: absolute;
     top: 20%;
-    /* margin: auto; */
     left: 20%;
     width: 80px;
     height: 80px;
@@ -72,7 +72,7 @@
 }
 @media(max-width: 550px) {
     .infos {
-        margin: 40px 0 100px;
+        margin: 40px 0 40px;
         padding: 0;
         height: 50px;
     }
@@ -97,7 +97,112 @@
 }
 @media (max-width: 400px) {
     .infos {
-        margin: 33px 0 100px;
+        margin: 33px 0 40px;
+        padding: 0;
+        height: 50px;
+    }
+} */
+
+.infos-projets {
+    position: relative;
+    top: 0%;
+    width: 100%;
+    margin: 90px 0 70px;
+    padding: 0;
+    height: 100px;
+    background: #009EE2;
+    box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.16), 0px 4px 32px rgba(0, 0, 0, 0.16);
+}
+.infos-projets .rectangle-profil {
+    position: absolute;
+    top: 20%;
+    left: 6%;
+    width: 150px;
+    height: 150px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.16), 0px 4px 16px rgba(0, 0, 0, 0.32);
+    border-radius: 20px;
+}
+.infos-projets .rectangle-profil .rectanggle-bleu {
+    position: absolute;
+    top: 6.5%;
+    left: 6.5%;
+    margin: auto;
+    width: 130px;
+    height: 130px;
+    background: #009EE2;
+    box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.16), 0px 4px 16px rgba(0, 0, 0, 0.32);
+    border-radius: 20px;
+}
+.infos-projets .rectangle-profil .rectanggle-bleu img {
+    position: absolute;
+    top: 20%;
+    /* margin: auto; */
+    left: 20%;
+    width: 80px;
+    height: 80px;
+    border-radius: 50px;
+}
+@media(max-width: 990px) {
+    .infos-projets .rectangle-profil {
+        left: 4%;
+        width: 115px;
+        height: 115px;
+    }
+    .infos-projets .rectangle-profil .rectanggle-bleu {
+        margin: auto;
+        width: 100px;
+        height: 100px;
+    }
+    .infos-projets .rectangle-profil .rectanggle-bleu img {
+        width: 60px;
+        height: 60px;
+    }
+}
+@media(max-width: 600px) {
+    .infos-projets .rectangle-profil {
+        width: 100px;
+        height: 100px;
+    }
+    .infos-projets .rectangle-profil .rectanggle-bleu {
+        left: 8%;
+        margin: auto;
+        width: 85px;
+        height: 85px;
+    }
+    .infos-projets .rectangle-profil .rectanggle-bleu img {
+        width: 50px;
+        height: 50px;
+    }
+}
+@media(max-width: 550px) {
+    .infos-projets {
+        margin: 65px 0 50px;
+        padding: 0;
+        height: 50px;
+    }
+    .infos-projets .rectangle-profil {
+        width: 60px;
+        left: 8%;
+        height: 60px;
+        border-radius: 10px;
+    }
+    .infos-projets .rectangle-profil .rectanggle-bleu {
+        left: 8.5%;
+        top: 8%;
+        margin: auto;
+        width: 50px;
+        height: 50px;
+        border-radius: 10px;
+    }
+    .infos-projets .rectangle-profil .rectanggle-bleu img {
+        width: 30px;
+        height: 30px;
+    }
+}
+@media (max-width: 400px) {
+    .infos-projets {
+        margin: 58px 0 50px;
         padding: 0;
         height: 50px;
     }
