--- a/public/assets/css/maintenance.css
+++ b/public/assets/css/maintenance.css
@@ -7,7 +7,6 @@ body {
 .maintenance img {
     width: 30%;
     height: 30%;
-/*     margin-top: 140px; */
 }
 .maintenance {
     height: 100%;
@@ -18,7 +17,6 @@ body {
 
 .maintenance .col-md-12 h1 {
     width: 100%;
-/*     margin-bottom: 140px; */
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 400;
@@ -28,16 +26,16 @@ body {
 }
 
 @media (max-width: 1000px) {
-/*     .col-md-12 {
-        padding: 0;
-        margin:0;
-        width: 100%;
-    } */
     .maintenance .col-md-12 h1 {
         width: 100%;
         font-size: 36px;
         text-align: center;
-
+    }
+    .maintenance {
+        padding: 100px 0 50px;
+    }
+    .maintenance img {
+        width: 30%;
     }
 }
 @media (max-width: 900px) {
@@ -72,11 +70,10 @@ body {
 }
 @media (max-width: 500px) {
     .maintenance {
-        padding: 110px 0 50px;
+        padding: 50px 0 50px;
     }
     .maintenance img {
-        width: 50%;
-        /* margin-top: 140px; */
+        width: 30%;
     }
     .maintenance .col-md-12 h1 {
         width: 100%;
