--- a/public/assets/css/modification_mdp.css
+++ b/public/assets/css/modification_mdp.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
 .admin {
     margin: 0;
     padding: 0;
@@ -12,31 +14,37 @@
     line-height: 32px;
     text-align: center;
     color: #009EE2;
-    margin-bottom: 60px;
-    margin-top: 60px;
+    margin-bottom: 50px;
+    margin-top: 0;
 }
 
 /*modification mdp*/
 
-.md-pass{
+.form-control:disabled, .form-control:read-only {
+    background-color: #ffffff;
+    border: none;
+}
+
+.md-pass {
     width: 100%;
     background-color: #fff;
     border-radius: 4px;
     overflow: hidden;
 }
 
-.form{
+.form {
     padding: 20px 40px;
 }
 
-.form-control{
+.form-control {
     width: 60%;
     margin: auto;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     padding-bottom: 20px;
     border: none;
     position: relative;
 }
+
 .form-control label {
     display: inline-block;
     margin-bottom: 10px;
@@ -44,78 +52,139 @@
     font-family: 'Ubuntu';
     font-weight: 600;
 }
-.form-control input{
-    display: block;
+
+.form-control input {
+/*     display: block; */
     width: 100%;
     padding: 10px;
     border-radius: 4px;
-    border: 1px solid #009EE2;;
+    border: 1px solid #009EE2;
+    color: #000000;
 }
 
-.form-control.success input{
+.form-control.success input {
     border: 2px solid rgb(26, 167, 26);
 }
-.form-control.error input{
+
+.form-control.error input {
     border: 2px solid rgb(228, 29, 22);
 }
-.form-control small{
-    position:absolute;
+
+.form-control small {
+    position: absolute;
     margin: 3px;
     visibility: hidden;
 }
-button{
+
+
+.form-control .error {
+    color: #D93025;
+    font-size: 18px;
+    display: none;
+    margin-right: 8px;
+}
+
+.input-box i {
+    right: 15px;
+    cursor: pointer;
+    color: #009EE2;
+    padding: 8px;
+}
+.form-control .fas {
+    position: absolute;
+    padding: 15px;
+    right: 20px;
+    cursor: pointer;
+}
+
+.text {
+    font-size: 16px;
+    font-weight: 400;
+    color: #a6a6a6;
+}
+
+.form-control button {
     background-color: #009EE2;
-    color:#fff;
+    color: #fff;
     padding: 10px 20px;
     width: auto;
-    border-radius: 50px;
+    border-radius: 10px;
     border: none;
     cursor: pointer;
 }
+.form-control button.active:hover {
+    background: #D93025;
+    cursor: pointer;
+}
+
 /*Média quéry*/
 @media (max-width: 900px) {
     .admin h2 {
         font-size: 25px;
     }
+    .text {
+        font-size: 14px;
+    }
 }
+
 @media (max-width: 768px) {
     .admin h2 {
         font-size: 20px;
     }
+    .form-control input {
+        font-size: 12px;
+    }
+    .text {
+        font-size: 12px;
+    }
+    .form-control .fas {
+        padding: 8px;
+    }
 }
+
 @media (max-width: 500px) {
     .admin h2 {
         font-size: 16px;
     }
 }
+
 @media (max-width: 768px) {
     .form-control label {
         margin-bottom: 10px;
         font-size: 12px;
     }
-    .form-control input{
+
+    .form-control input {
         padding: 6px;
     }
 }
+
 @media (max-width: 412px) {
     .form-control label {
         font-size: 10px;
     }
+
 }
+
 @media (max-width: 500px) {
-    .form-control{
+    .form-control {
         margin-bottom: 10px;
         padding-bottom: 10px;
     }
 }
+
 @media (max-width: 768px) {
-    button {
+    .form-control button {
         font-size: 12px;
     }
 }
+
 @media (max-width: 412px) {
-    button {
+    .form-control button {
         font-size: 8px;
         padding: 8px 10px;
+    }
+    .text {
+        font-size: 10px;
     }
 }
