--- a/public/assets/css/prestataires.css
+++ b/public/assets/css/prestataires.css
@@ -1,7 +1,6 @@
 .containers {
     width: 100%;
-    /* margin-top: 100px; */
-    margin-top: -14px;
+    margin-top: 100px;
 }
 
 .containers .col-md-12 .col-md-6 {
@@ -17,7 +16,7 @@
     width: 20%;
     color: blue;
     margin-left: auto;
-    margin-right:auto;
+    margin-right: auto;
 }
 
 .chiffre p {
@@ -106,10 +105,11 @@
 }
 
 .envoi ul {
+
     width: 100%;
     padding: 20px 0px 0px 20px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .envpoi ul .li {
@@ -136,7 +136,7 @@
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 800;
-    font-size: 35px;
+    font-size: 30px;
     line-height: 50px;
     text-align: center;
     color: #009EE2;
@@ -147,7 +147,7 @@
     width: 30%;
     text-align: center;
     margin-left: auto;
-    margin-right:auto;
+    margin-right: auto;
 }
 
 .clients p {
@@ -170,9 +170,9 @@
     border: none;
 }
 
-.presta button{
+.presta button {
     background-color: #009EE2;
-    color:#fff;
+    color: #fff;
     font-family: 'Ubuntu';
     padding: 10px 20px;
     width: auto;
@@ -184,7 +184,7 @@
 
 .clients img {
     width: 100%;
-    padding: 0px 0px 0px 80px;
+    padding: 0px 0px 20px 80px;
 }
 
 /* .d-grid .btn-primary {
@@ -204,7 +204,7 @@
     font-style: normal;
     font-weight: 700;
     font-size: 44px;
-/*     line-height: 50px; */
+    /*     line-height: 50px; */
     margin: 10px 100px;
     color: #009EE2;
 }
@@ -213,7 +213,7 @@
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 700;
-    font-size: 36px;
+    font-size: 30px;
     line-height: 32px;
     text-align: center;
     color: #009EE2;
@@ -246,18 +246,22 @@
     font-family: 'Ubuntu';
 }
 
-
 @media (max-width: 1060px) {
     .containers .card-body p {
-        font-size: 30px;
+        font-size: 35px;
         line-height: 50px;
-        margin: 10px;
+        margin: 20px;
     }
 
     .containers .row img {
         width: 100%;
         height: 100%;
         padding-left: 0px;
+    }
+}
+@media (max-width: 870px) {
+    .containers .card-body p {
+        font-size: 30px;
     }
 }
 
@@ -273,6 +277,10 @@
         width: 60%;
         height: 100%;
         margin: auto;
+    }
+
+    .presta .container-fluid {
+        margin-top: 0;
     }
 }
 
@@ -408,6 +416,7 @@
         font-size: 15px;
     }
 }
+
 @media (max-width: 500px) {
     .clients h2 {
         font-weight: 600;
@@ -436,7 +445,7 @@
     .envoi ul .li p {
         font-weight: 600;
         font-size: 8px;
-        line-height: 80px;
+        line-height: 40px;
     }
 }
 
@@ -448,31 +457,9 @@
         padding: 20px 20px 20px 20px;
     }
 }
-/* @media (max-width: 1150px) {
-    .d-grid .btn-primary {
-        font-size: 20px;
-    }
-}
 
-@media (max-width: 950px) {
-    .d-grid .btn-primary {
-        font-size: 16px;
-    }
-}
-
-@media (max-width: 768px) {
-    .d-grid .btn-primary {
-        font-size: 16px;
-    }
-}
-
-@media (max-width: 400px) {
-    .d-grid .btn-primary {
-        font-size: 12px;
-    }
-} */
 @media (max-width: 500px) {
-   .presta button {
+    .presta button {
         font-size: 12px;
         padding: 5px 10px;
         margin-top: 10px
@@ -485,11 +472,13 @@
         font-size: 16px;
     }
 }
+
 @media (max-width: 500px) {
     .clients p {
         font-weight: 600;
         font-size: 12px;
     }
+
 }
 
 @media (max-width: 1000px) {
@@ -497,21 +486,31 @@
         font-size: 12px;
     }
 }
+
 @media (max-width: 768px) {
     .clients .textes {
         font-size: 14px;
     }
 }
+
 @media (max-width: 500px) {
     .clients .textes {
         font-size: 10px;
     }
+    .presta .container-fluid {
+        margin-top: 0;
+    }
 }
+
 @media (max-width: 1060px) {
     .clients img {
         width: 100%;
         height: 100%;
         padding-left: 0px;
+    }
+
+    .presta .container-fluid {
+        margin-top: 0;
     }
 }
 
@@ -522,4 +521,5 @@
         margin: auto;
         padding-top: 10px;
     }
+
 }
