--- a/public/assets/css/profil_administrateur.css
+++ b/public/assets/css/profil_administrateur.css
@@ -12,8 +12,9 @@
     line-height: 32px;
     text-align: center;
     color: #009EE2;
-    margin-bottom: 60px;
-    margin-top: 60px;
+    margin-bottom: 50px;
+    margin-top: 10px;
+    z-index: -1;
 }
 /* .d-grid .btn {
     width: auto;
@@ -22,11 +23,14 @@
     margin: 0;
     padding: 5px 20px;
     color: #009EE2;
-    background-color: #fff;
+    back²ground-color: #fff;
     border: none;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 1.16), 0px 4px 10px rgba(0, 0, 0, 0.16);
     border-radius: 50px;
 } */
+.form-control {
+    border: none;
+}
 .form-control button {
     width: auto;
     padding: 5px 40px;
@@ -155,6 +159,7 @@ form input:hover {
     form input {
         height: 35px;
         margin-bottom: 30px;
+        font-size: 12px;
     }
 }
 @media (max-width: 930px) {
