--- a/public/assets/css/inscription.css
+++ b/public/assets/css/inscription.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap");
 
 *,
 *::before,
@@ -6,38 +6,37 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
-html,body{
+html,
+body {
     height: 100%;
-  }
-#formulaire{
+}
+#formulaire {
     margin-top: 10px;
-}
-.form{
-    position: relative;
-}
-.forme::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 80%;
     background-image: url("../images/Jokkolanté\ KK.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    z-index: 1;
-  }
+}
+.error {
+    border: 1px solid red;
+}
+
+.form {
+    position: relative;
+}
+
 .reseau img {
     width: 40px;
     height: 40px;
-    background-color: #D9D9D9;
+    background-color: #d9d9d9;
     border-radius: 35px;
-    margin-right: 50px;
+    margin-right: 20px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
 }
 #formulaire hr {
     background: #000000;
 }
 #formulaire h3 {
-    font-family: 'Ubuntu', sans-serif;
+    font-family: "Ubuntu", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -47,7 +46,7 @@ html,body{
 }
 
 #formulaire h4 {
-    font-family: 'Ubuntu', sans-serif;
+    font-family: "Ubuntu", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -55,13 +54,13 @@ html,body{
     letter-spacing: -0.02em;
     color: #000000;
 }
-#formulaire .form-control{
-    background-color: #D9D9D9;
+#formulaire .form-control {
+    background-color: #d9d9d9;
     border-radius: 5px;
 }
 
 #formulaire .form-label {
-    font-family: 'Ubuntu', sans-serif;
+    font-family: "Ubuntu", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -71,56 +70,56 @@ html,body{
 }
 
 #formulaire span {
-    color: #D9D9D9;
+    color: #d9d9d9;
 }
 #formulaire .span1 {
-    color: #009EE2;
+    color: #009ee2;
 }
-#formulaire .form-text{
+#formulaire .form-text {
     color: #000000;
     font-size: 12px;
     line-height: 16px;
 }
-#formulaire button{
+#formulaire button {
     float: right;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: "Ubuntu", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 22px;
     line-height: 44px;
     letter-spacing: -0.02em;
     border: none;
-    color: #FFFFFF;
+    color: #ffffff;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
     text-decoration: none;
-    background: #009EE2;
+    background: #009ee2;
     border-radius: 40px;
     margin-bottom: 10px;
 }
 .form-group {
-  position: relative;
+    position: relative;
 }
 
 .icon {
-  position: absolute;
-  top: 82%;
-  right: 10px;
-  transform: translateY(-50%);
+    position: absolute;
+    top: 82%;
+    right: 10px;
+    transform: translateY(-50%);
 }
-.icon img{
-   width: 30px;
-   height: 30px;
-  }
-  @media (max-width: 503px){
+.icon img {
+    width: 30px;
+    height: 30px;
+}
+@media (max-width: 503px) {
     .icon {
         top: 77%;
-      }
-  }
-@media (max-width: 503px){
+    }
+}
+@media (max-width: 503px) {
     .reseau img {
         width: 43px;
         height: 30px;
-        background-color: #D9D9D9;
+        background-color: #d9d9d9;
         border-radius: 35px;
         margin-right: 30px;
         box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
@@ -134,12 +133,12 @@ html,body{
     }
     #formulaire .form-label {
         font-size: 16px;
-         }
-         #formulaire .form-text{
-            color: #000000;
-            font-size: 10px;
-            line-height: 14px;
-        }
+    }
+    #formulaire .form-text {
+        color: #000000;
+        font-size: 10px;
+        line-height: 14px;
+    }
 }
 
 .fixed-top {
@@ -147,7 +146,6 @@ html,body{
     top: 0;
     right: 0;
     left: 0;
-
 }
 
 .fixed-bottom {
@@ -162,7 +160,7 @@ html,body{
 .navbar {
     width: 100%;
     margin: 0;
-    background: #009EE2;
+    background: #009ee2;
 }
 
 .navbar .navbar-brand-wrapper .navbar-brand {
@@ -180,13 +178,18 @@ html,body{
     margin-left: auto;
     margin-right: auto;
     height: auto;
-
+display: flex;
+justify-content: center;
     margin-bottom: 0px;
-/*     padding: 0 1.75rem; */
+    /*     padding: 0 1.75rem; */
+}
+.navbar-brand {
+   
+    margin-right: 0; 
 }
 
 .navbar .navbar-brand-wrapper .navbar-brand img {
-    width: 100%;
+    width: 80px;
     max-width: 100%;
     height: 80px;
     margin: auto;
@@ -222,7 +225,7 @@ html,body{
     -webkit-transition: width 0.25s ease;
     -moz-transition: width 0.25s ease;
     -ms-transition: width 0.25s ease;
-    color: #009EE2;
+    color: #009ee2;
 
     width: calc(100% - 240px);
     height: 135px;
@@ -233,7 +236,6 @@ html,body{
     color: #000000;
     height: 40px;
     border-radius: 0px;
-
 }
 
 .navbar-toggler {
@@ -243,18 +245,14 @@ html,body{
 
     margin-right: 5px;
     margin-left: 5px;
-    background-color: #D9D9D9;
-
+    background-color: #d9d9d9;
 }
 
 .navbar-toggler img {
     margin-top: -5px;
     width: 20px;
     height: 10px;
-
-
 }
-
 
 .navbar .navbar-menu-wrapper .navbar-nav {
     -webkit-box-orient: horizontal;
@@ -278,18 +276,22 @@ html,body{
     align-items: center;
 }
 .navbar .navbar-menu-wrapper .navbar-nav .nav-item .nav-link button:hover {
-    background-color: #EB1566 !important;
-    color: #FFFFFF;
+    background-color: #eb1566 !important;
+    color: #ffffff;
+}
+.navbar .navbar-menu-wrapper .navbar-nav .nav-item .active {
+    background-color: #eb1566 !important;
+    color: #ffffff !important;
 }
 
 .navbar .navbar-menu-wrapper .navbar-nav .nav-item .nav-link button {
     font-size: 14px;
-    color: #009EE2;
+    color: #009ee2;
 
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     width: 155px;
     height: 50px;
-    border: 1px solid #009EE2;
+    border: 1px solid #009ee2;
     border-radius: 10px;
 }
 
@@ -309,11 +311,10 @@ html,body{
 
     .navbar .navbar-brand-wrapper .navbar-brand {
         margin-right: 0;
-        padding: .25rem 0;
+        padding: 0.25rem 0;
     }
 
     .navbar .navbar-brand-wrapper .brand-logo-mini {
-
         padding-top: 0px;
     }
 
@@ -343,14 +344,12 @@ html,body{
     }
 
     .navbar .navbar-menu-wrapper .navbar-nav .nav-item .nav-link button {
-
         font-size: 10px;
         width: 80px;
         height: 30px;
-        border: 1px solid #009EE2;
+        border: 1px solid #009ee2;
         border-radius: 5px;
     }
-
 }
 
 @media (max-width: 469px) {
@@ -359,7 +358,6 @@ html,body{
     }
 
     .navbar .navbar-brand-wrapper .brand-logo-mini {
-
         padding-top: 0px;
     }
 
@@ -385,11 +383,10 @@ html,body{
     }
 
     .navbar .navbar-menu-wrapper .navbar-nav .nav-item .nav-link button {
-
         font-size: 6px;
         width: 50px;
         height: 20px;
-        border: 1px solid #009EE2;
+        border: 1px solid #009ee2;
         border-radius: 5px;
     }
 
@@ -401,8 +398,7 @@ html,body{
         padding: 0;
         margin-right: 5px;
         margin-left: 5px;
-        background-color: #D9D9D9;
-
+        background-color: #d9d9d9;
     }
 
     .select {
@@ -412,7 +408,7 @@ html,body{
         font-size: 10px;
         position: relative;
         width: 100%;
-        border: 2px solid #009EE2;
+        border: 2px solid #009ee2;
         border-radius: 10px;
     }
 
@@ -459,7 +455,7 @@ html,body{
     .reseau img {
         width: 40px;
         height: 40px;
-        background-color: #D9D9D9;
+        background-color: #d9d9d9;
         border-radius: 35px;
         margin-right: 20px;
         box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
@@ -471,7 +467,6 @@ html,body{
 
 @media (max-width: 313px) {
     .navbar .navbar-menu-wrapper .navbar-nav .nav-item .nav-link button {
-
         display: none;
     }
 }
@@ -480,8 +475,8 @@ html,body{
 .sidebar {
     padding: 0 10px 10px 10px;
     height: 100%;
-    background: #009EE2;
-    font-family: 'Ubuntu', sans-serif;
+    background: #009ee2;
+    font-family: "Ubuntu", sans-serif;
     height: 100%;
     width: 300px;
 
@@ -509,7 +504,7 @@ html,body{
 
 .sidebar .nav h1 {
     margin: 5px;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: "Ubuntu", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 22px;
@@ -518,13 +513,12 @@ html,body{
     align-items: center;
     text-align: center;
     letter-spacing: -0.02em;
-    color: #FFFFFF;
-
+    color: #ffffff;
 }
 
 .sidebar .nav ul li {
     padding: 5px;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: "Ubuntu", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 10px;
@@ -533,7 +527,7 @@ html,body{
     /* align-items: center; */
     /* text-align: center; */
     letter-spacing: -0.02em;
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .sidebar .nav ul li img {
@@ -553,9 +547,9 @@ html,body{
     margin-right: 5px;
     text-align: center;
     line-height: 20px;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     display: inline-block;
-    color: #009EE2;
+    color: #009ee2;
     border-radius: 50px;
     font-size: 12;
     font-weight: 400;
@@ -569,17 +563,12 @@ html,body{
     margin-top: 20px;
     margin-left: 13px;
 
-    background-color: #FFFFFF;
-
-
+    background-color: #ffffff;
 }
-
 
 /* style for off-canvas menu*/
 
 .page-body-wrapper {
-
-
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -595,13 +584,10 @@ html,body{
 
 .page-body-wrapper.full-page-wrapper {
     width: 100%;
-
 }
 
-.navbar.fixed-top+.page-body-wrapper {
-
+.navbar.fixed-top + .page-body-wrapper {
     padding: 0;
-
 }
 
 .main-panel {
@@ -610,7 +596,7 @@ html,body{
     -webkit-transition: width 0.25s ease, margin 0.25s ease;
     transition: width 0.25s ease, margin 0.25s ease;
     width: calc(100% - 240px);
-   height: 100%;
+    height: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -622,8 +608,8 @@ html,body{
 
 .content-wrapper {
     padding: 0;
-    color: #009EE2;
-    background: #FFFFFF;
+    color: #009ee2;
+    background: #ffffff;
     width: 100%;
     -webkit-box-flex: 1;
     -ms-flex-positive: 1;
@@ -642,20 +628,19 @@ html,body{
 }
 
 .content-wrapper .card-body {
-margin: 0;
-padding: 0;
+    margin: 0;
+    padding: 0;
     margin-top: 20px;
     background-image: url("../images/Jokkolanté\ KK.png");
     background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
-    height: 100%;
+   
 }
-
 
 .content-wrapper .card-body h4,
 p {
-    font-family: 'Ubuntu', sans-serif;
+    font-family: "Ubuntu", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -666,7 +651,6 @@ p {
     align-items: center;
     text-align: center;
     letter-spacing: 0.03em;
-
 }
 
 .content-wrapper .card-body span {
@@ -685,22 +669,21 @@ p {
     border: none;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
     text-decoration: none;
-    background: #FFFFFF;
+    background: #ffffff;
     border-radius: 80px;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: "Ubuntu", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
     text-decoration: none;
-    color: #009EE2;
+    color: #009ee2;
 }
-
 
 @media (max-width: 650px) {
     .main-panel {
         margin-left: 10px;
         margin-right: 10px;
-         }
+    }
     .content-wrapper .card-body #suivant {
         padding: 0;
         width: 30%;
@@ -715,22 +698,22 @@ p {
     font-size: 16px;
     position: relative;
     width: 100%;
-    border: 2px solid #009EE2;
+    border: 2px solid #009ee2;
     border-radius: 10px;
-    color: #009EE2;
-  }
+    color: #009ee2;
+}
 
-  .select-button {
+.select-button {
     position: relative;
     padding: 10px;
     border-bottom: none;
     background-color: #fff;
-    color: #009EE2;
+    color: #009ee2;
     cursor: pointer;
     border-radius: 10px;
-  }
+}
 
-  .select-icon {
+.select-icon {
     position: absolute;
     top: 50%;
     right: 10px;
@@ -742,9 +725,9 @@ p {
     border-top: 6px solid #009ee2;
     transition: transform 0.3s;
     cursor: pointer;
-  }
+}
 
-  .select-options {
+.select-options {
     border-radius: 10px;
     display: none;
     list-style: none;
@@ -753,48 +736,41 @@ p {
     color: #009ee2;
     border-top: none;
     background-color: #fff;
-  }
+}
 
-  .select-option {
+.select-option {
     padding: 10px;
     cursor: pointer;
-  }
+}
 
-  .select-options.active {
+.select-options.active {
     display: block;
-  }
+}
 
-  .select-button.active .select-icon {
+.select-button.active .select-icon {
     transform: translateY(-50%) rotate(180deg);
-  }
+}
 
-
-  .select-button.active .select-icon {
+.select-button.active .select-icon {
     transform: translateY(-50%) rotate(180deg);
-  }
+}
 
 @media (max-width: 991px) {
-
-    .navbar.fixed-top+.page-body-wrapper {
+    .navbar.fixed-top + .page-body-wrapper {
         padding: 0;
-
-}
+    }
     .sidebar {
         height: 100%;
         width: 240px;
-
     }
 
     .sidebar .nav h1 {
-
         font-size: 16px;
         line-height: 20px;
     }
 
     .sidebar .nav ul li {
-
         font-size: 10px;
-
     }
 
     /*  .sidebar .nav {
@@ -811,10 +787,8 @@ p {
                 } */
 
     .main-panel {
-
         width: 100%;
     }
-
 
     .sidebar-offcanvas {
         position: fixed;
@@ -835,8 +809,7 @@ p {
         margin-top: 0;
     }
 
-   /*  .content-wrapper .card {
+    /*  .content-wrapper .card {
         margin-top: -80px;
     }*/
-
 }
