--- a/public/assets/css/accueil.css
+++ b/public/assets/css/accueil.css
@@ -129,7 +129,7 @@
 
 .boxAccueil .col-md-12 {
     display: flex;
-    padding: 0 50px;
+    padding: 0 200px;
 }
 
 .boxAccueil .col-md-12 .col-md-6 {
@@ -614,8 +614,19 @@
     color: #fff;
 }
 
+@media(max-width: 1200px) {
+    .boxAccueil .col-md-12 {
+        display: flex;
+        padding: 0 100px;
+    }
+}
 
 @media(max-width: 1050px) {
+    .boxAccueil .col-md-12 {
+        display: flex;
+        padding: 0 50px;
+    }
+
     .box2 {
         margin-left: 20px;
         margin-right: 20px;
@@ -894,6 +905,12 @@
 }
 
 @media(max-width: 780px) {
+    .boxAccueil .col-md-12 {
+        display: block;
+        width: 100%;
+        padding: 0 50px;
+    }
+
     .container-fluid1 {
         width: 100%;
     }
@@ -1018,6 +1035,10 @@
         max-width: 50px;
         max-height: 50px;
         margin-left: -55%;
+    }
+
+    .boxAccueil .textes {
+        width: 100%;
     }
 
     .text-justify {
